--- a/src/components/Delivery/style.scss
+++ b/src/components/Delivery/style.scss
@@ -167,7 +167,7 @@
         bottom: 1.2em;
       }
 
-      a {
+      .link {
         color: #ff6122;
         font-size: 11px;
         font-weight: 600;
