--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -19,6 +19,20 @@
     width: 80%;
   }
 
+  img{
+    display: none;
+    cursor: pointer;
+    @include media(md) {
+      display: block;
+    }
+    @include media(lg) {
+      display: block;
+    }
+    @include media(xlg) {
+      display: block;
+    }
+  }
+
   &__menu {
     align-items: center;
     display: flex;
