--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -15,6 +15,8 @@
 
   &__content {
     width: 100%;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
     @include media(md) {
       width: 60%;
     }
@@ -23,6 +25,12 @@
     }
     @include media(xlg) {
       width: 75%;
+    }
+
+    &--close {
+      width: 100%;
+      -webkit-transition: all 0.5s ease;
+      -moz-transition: all 0.5s ease;
     }
 
     &__cards {
@@ -55,6 +63,8 @@
     height: 100%;
     border-left: 1px solid #f3f3ef;
     width: 100%;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
     @include media(md) {
       width: 40%;
     }
@@ -63,6 +73,13 @@
     }
     @include media(xlg) {
       width: 25%;
+    }
+
+    &--close {
+      overflow: hidden;
+      width: 0%;
+      -webkit-transition: all 0.5s ease;
+      -moz-transition: all 0.5s ease;
     }
 
     .listOrder {
