--- a/src/components/OrderList/styles.scss
+++ b/src/components/OrderList/styles.scss
@@ -35,5 +35,20 @@
       font-size: 13px;
       float: right;
     }
+
+    .delete{
+      width: 25px;
+      height: 25px;
+      background-color: #cccccc;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 5px;
+      img{
+        width: 15px;
+        height: 15px;
+        margin: 0;
+      }
+    }
   }
 }
