--- a/src/components/ProductCard/styles.scss
+++ b/src/components/ProductCard/styles.scss
@@ -1,4 +1,4 @@
-@import "../../styles/index";
+@import '../../styles/index';
 
 .card {
   width: 100%;
@@ -56,7 +56,7 @@
       align-items: center;
       margin-top: 0.5em;
 
-      button{
+      button {
         border: none;
         background-color: #fff;
         img {
