--- a/src/styles/base/mediaquerys/_mediaquerys.scss
+++ b/src/styles/base/mediaquerys/_mediaquerys.scss
@@ -1,4 +1,3 @@
-
 // =============================================================================
 // MediaQuery Breakpoints - mixin
 // =============================================================================
@@ -11,18 +10,25 @@ $breakpoint-xlg: 1200px;
 
 @mixin media($media) {
   @if $media == ssm {
-    @media (min-width: $breakpoint-ssm) and (max-width: $breakpoint-sm) { @content; }
+    @media (min-width: $breakpoint-ssm) and (max-width: $breakpoint-sm) {
+      @content;
+    }
   }
   @if $media == sm {
-    @media (min-width: $breakpoint-sm) and (max-width: $breakpoint-md) { @content; }
-  }
-  @else if $media == md {
-    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg) { @content; }
-  }
-  @else if $media == lg {
-    @media (min-width: $breakpoint-lg) { @content; }
-  }
-  @else if $media == xlg {
-    @media (min-width: $breakpoint-xlg) { @content; }
+    @media (min-width: $breakpoint-sm) and (max-width: $breakpoint-md) {
+      @content;
+    }
+  } @else if $media == md {
+    @media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg) {
+      @content;
+    }
+  } @else if $media == lg {
+    @media (min-width: $breakpoint-lg) {
+      @content;
+    }
+  } @else if $media == xlg {
+    @media (min-width: $breakpoint-xlg) {
+      @content;
+    }
   }
 }
