--- a/src/components/CategoryButton/styles.scss
+++ b/src/components/CategoryButton/styles.scss
@@ -1,4 +1,4 @@
-@import "../../styles/index";
+@import '../../styles/index';
 
 .categoryButton {
   width: 60px;
@@ -35,18 +35,18 @@
     justify-content: center;
     align-items: center;
     border: 2px solid #f8f8f8;
-      @include media(md) {
-        width: 55px;
-        height: 55px;
-      }
-      @include media(lg) {
-        width: 55px;
-        height: 55px;
-      }
-      @include media(xlg) {
-        width: 55px;
-        height: 55px;
-      }
+    @include media(md) {
+      width: 55px;
+      height: 55px;
+    }
+    @include media(lg) {
+      width: 55px;
+      height: 55px;
+    }
+    @include media(xlg) {
+      width: 55px;
+      height: 55px;
+    }
 
     img {
       width: 35px;
