--- a/src/components/Delivery/style.scss
+++ b/src/components/Delivery/style.scss
@@ -1,4 +1,4 @@
-@import "../../styles/index";
+@import '../../styles/index';
 
 .deliveryContent {
   width: 90%;
@@ -90,9 +90,9 @@
     padding: 1em 1em 1em 0;
     box-sizing: border-box;
     @include media(sm) {
-        justify-content: center;
-        padding: 1em;
-      }
+      justify-content: center;
+      padding: 1em;
+    }
     @include media(md) {
       justify-content: center;
       padding: 1em;
