--- a/src/components/OrderModal/style.scss
+++ b/src/components/OrderModal/style.scss
@@ -1,4 +1,4 @@
-@import "../../styles/index";
+@import '../../styles/index';
 
 .modal {
   background-color: white;
@@ -28,7 +28,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      label{
+      label {
         font-size: 20px;
         font-weight: 500;
       }
@@ -68,7 +68,7 @@
       height: 40px;
       border: none;
       width: 80%;
-      &:disabled{
+      &:disabled {
         background-color: #cccccc;
       }
     }
