--- a/src/styles/base/font/_font-icons.scss
+++ b/src/styles/base/font/_font-icons.scss
@@ -2,8 +2,8 @@
  * Font icons - styles.
  */
 
-
-[class^="icon-"], [class*=" icon-"] {
+[class^='icon-'],
+[class*=' icon-'] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: none;
@@ -19,23 +19,23 @@
 }
 
 .icon-chat:before {
-  content: "\e900";
+  content: '\e900';
 }
 .icon-check:before {
-  content: "\e901";
+  content: '\e901';
 }
 .icon-clock:before {
-  content: "\e902";
+  content: '\e902';
 }
 .icon-edit:before {
-  content: "\e903";
+  content: '\e903';
 }
 .icon-forbiden:before {
-  content: "\e904";
+  content: '\e904';
 }
 .icon-next:before {
-  content: "\e905";
+  content: '\e905';
 }
 .icon-question:before {
-  content: "\e906";
+  content: '\e906';
 }
