--- a/src/styles/base/reset/_normalize.scss
+++ b/src/styles/base/reset/_normalize.scss
@@ -1,9 +1,8 @@
-
 // =============================================================================
 // Import Base variables
 // =============================================================================
 
-@import "../variables/_base-variables";
+@import '../variables/_base-variables';
 
 /*! normalize.scss v0.1.0 | MIT License | based on git.io/normalize */
 
@@ -341,8 +340,8 @@ input {
  * 2. Remove excess padding in IE 8/9/10.
  */
 
-input[type="checkbox"],
-input[type="radio"] {
+input[type='checkbox'],
+input[type='radio'] {
   box-sizing: border-box; /* 1 */
   padding: 0; /* 2 */
 }
@@ -353,8 +352,8 @@ input[type="radio"] {
  * decrement button to change from `default` to `text`.
  */
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -364,7 +363,7 @@ input[type="number"]::-webkit-outer-spin-button {
  *    (include `-moz` to future-proof).
  */
 
-input[type="search"] {
+input[type='search'] {
   -webkit-appearance: textfield; /* 1 */
   -moz-box-sizing: content-box;
   -webkit-box-sizing: content-box; /* 2 */
@@ -377,8 +376,8 @@ input[type="search"] {
  * padding (and `textfield` appearance).
  */
 
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -386,21 +385,20 @@ input[type="search"]::-webkit-search-decoration {
  * Define consistent border, margin, and padding.
  */
 
- 
- fieldset {
-	border: none;
-	padding: 0;
-  
+fieldset {
+  border: none;
+  padding: 0;
+
   margin-bottom: em(10);
-  @include media(md){
+  @include media(md) {
     display: flex;
     justify-content: space-between;
   }
-  @include media(lg){
+  @include media(lg) {
     display: flex;
     justify-content: space-between;
   }
-  @include media(xlg){
+  @include media(xlg) {
     display: flex;
     justify-content: space-between;
   }
