--- a/src/styles/base/variables/_base-variables.scss
+++ b/src/styles/base/variables/_base-variables.scss
@@ -1,4 +1,3 @@
-
 // =============================================================================
 // Size - variables
 // =============================================================================
@@ -17,34 +16,32 @@ $font__family: sans-serif;
 // =============================================================================
 
 // $color__text: #707070;
-$color__text--light: #8E8E8E;
+$color__text--light: #8e8e8e;
 // $color__text--dark: #000000;
 // $color--gray: #707070;
-$gray-e5: #E5E5E5;
-$color__text--dark: #22262a; 
-$color__text: #323c47; 
+$gray-e5: #e5e5e5;
+$color__text--dark: #22262a;
+$color__text: #323c47;
 //$color__text--light: #2F3337;
 $color__gray: #707070;
-$gray-ec: #ECECEC;
+$gray-ec: #ececec;
 $gray-f9: #f9f9f9;
 
-$color__primary: #E1251B; 
+$color__primary: #e1251b;
 
 $color__background--main: #ffffff;
 $color__lightgray: #bdbdbd;
-$color__inputs: #E4E4E4;
+$color__inputs: #e4e4e4;
 $color__inputs--disabled: #b6b6b6;
 $color__tooltip: #004eff;
 $color__background--footer: #000000;
-
-
 
 // =============================================================================
 // Convert pixels to ems - Function
 // =============================================================================
 
-@function em($px, $base: $font__size){
-    @return($px / $base) * 1em;
+@function em($px, $base: $font__size) {
+  @return ($px / $base) * 1em;
 }
 
 // =============================================================================
