--- a/src/components/OrderModal/style.scss
+++ b/src/components/OrderModal/style.scss
@@ -2,12 +2,21 @@
 
 .modal {
   background-color: white;
-  width: 30%;
+  width: 90%;
   min-height: auto;
   border-radius: em(5);
   padding: 10px;
   overflow: hidden;
   margin: auto;
+  @include media(md) {
+    width: 70%;
+  }
+  @include media(lg) {
+    width: 50%;
+  }
+  @include media(xlg) {
+    width: 30%;
+  }
   &:focus {
     outline: none;
   }
@@ -82,4 +91,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 10;
 }
